[tool.poetry]
name = "git-graph"
version = "0.1.0"
description = "Make git graphs to visualize how git strategy will look"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^14.1.1"
pydantic = "^1.10.0"
ipykernel = "^6.15.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
