[tool.poetry]
name = "git-graph"
version = "0.1.0"
description = "Make git graphs to visualize how git strategy will look"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12"
Faker = "^24.11.0"
pydantic = "^2.7.1"
ipykernel = "^6.29.4"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[tool.ruff]
line-length = 120
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
